# Epitech_tetris

./: CMakeLists.txt  Makefile  README.md  my_tetris
include/: tetris.h  tetris_functions.h  tetris_macros.h  tetris_typedef.h
include/lib/my_clib/: my.h
src/: main.c
src/free_manager/: free_tab.c
src/game_manager/: game_analyzer.c
src/game_manager/parsing/: customs_starter.c  tetris_help.c
src/game_manager/parsing/args/: flag_parsing.c
src/game_manager/set_up/: setup_options.c
test/: a.out  test_pointer_function.c
